force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/CRMG_WF__Workflow_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Workflow Setting</label>
</CustomObject>