force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__Email_Templete_Autocomplete__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Email_Templete_Autocomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alert Template Auto Complete</label>
    <type>Checkbox</type>
</CustomField>