force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__Enable_Clone_Button__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Enable_Clone_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Clone Button</label>
    <type>Checkbox</type>
</CustomField>