force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__ExecuteNow__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__ExecuteNow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecting &quot;Checked&quot; below makes the &quot;Execute Now&quot; button visible by default on the Workflow Rule Detail page.</description>
    <label>Execute Now</label>
    <type>Checkbox</type>
</CustomField>