force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__Field_Update_Auto_Complete__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Field_Update_Auto_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Update Auto Complete</label>
    <type>Checkbox</type>
</CustomField>