force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__Field_Update_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Field_Update_Picklist__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Field Update Picklist</label>
    <type>Checkbox</type>
</CustomField>