force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__Lookup_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Lookup_Page_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>This setting is to manage the pagination for the Email Templates list. The default value is set to 50.</description>
    <label>Lookup Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>