force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__New_Record_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__New_Record_Picklist__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create New Record Picklist</label>
    <type>Checkbox</type>
</CustomField>