force-app/main/default/objects/CRMG_WF__Workflow_Setting__c/fields/CRMG_WF__WorkflowSplash__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__WorkflowSplash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Off Workflow Splash Page</label>
    <type>Checkbox</type>
</CustomField>